--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ourx">
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,6 +22,8 @@
             android:windowSoftInputMode="adjustPan"
             android:parentActivityName=".MainActivity">
         </activity>
+        <activity android:name=".SearchPopup"
+            android:theme="@style/AppTheme.Popup"/>
         <activity
             android:name=".MainActivity"
             android:label="@string/activity_medication_schedule"
