--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:preference-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'com.google.android.gms:play-services-auth:12.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -38,7 +41,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "android.arch.lifecycle:viewmodel:1.1.1"
-
+    implementation "com.google.android.gms:play-services-maps:11.+"
+    implementation "com.google.android.gms:play-services-location:16.0.0"
+  //  implementation "com.google.android.gms:play-services-places:16.1.0"
+    implementation 'com.google.android.libraries.places:places:1.1.0'
     // Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
 
