--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.miguelcatalan:materialsearchview:1.4.0'
+    implementation 'com.github.DavidProdinger:weekdays-selector:1.1.0'
 
     def room_version = "2.1.0-alpha04"
     implementation "androidx.room:room-runtime:$room_version"
